<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_seus_pontos"
            android:icon="@drawable/ic_action_geral"
            android:title="Seus Pontos" />
        <item
            android:id="@+id/nav_seus_dados"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="Seus Dados" />

        <item
            android:id="@+id/nav_resgate"
            android:icon="@drawable/ic_action_resgate"
            android:title="Resgate"/>
        <item
            android:id="@+id/nav_shopping"
            android:icon="@drawable/cart"
            android:title="Shopping"/>

    </group>


    <item android:title="Ajustes Gerais">
        <menu>
            <item
                android:id="@+id/nav_fale_conosco"
                android:icon="@drawable/ic_action_fale_conosco"
                android:title="Fale Conosco"/>
            <item
                android:id="@+id/nav_trocar_email_portador"
                android:icon="@android:drawable/ic_dialog_email"
                android:title="@string/action_settings_trocar_email_portador" />
            <item
                android:id="@+id/nav_trocar_senha"
                android:icon="@android:drawable/ic_partial_secure"
                android:title="@string/action_settings_trocar_senha_login" />
        </menu>
    </item>

    <item android:title="">
        <menu>
        <item
            android:id="@+id/nav_logout"
            android:icon="@android:drawable/ic_menu_revert"
            android:title="@string/action_settings_logout" />
        </menu>
    </item>


</menu>
