<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="itspay.br.com.fragment.CinemaProdutosFragment">


    <LinearLayout
        android:id="@+id/linear_americanas"
        android:layout_marginTop="130dp"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_americanas"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/americanas" />

        <TextView
            android:id="@+id/txt_americanas"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/voucher_americanas"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cinemark"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cinemark"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/cinemark" />

        <TextView
            android:id="@+id/txt_cinemark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/voucher_cinemark"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_cinemark_padrao"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_cinemark_padrao"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/cinemark" />

        <TextView
            android:id="@+id/txt_cinemark_padrao"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/voucher_cinemark_padrao"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_shoptime"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_shoptime"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/shoptime" />

        <TextView
            android:id="@+id/txt_shoptime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/voucher_shoptime"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear_submarino"
        android:layout_marginLeft="15dp"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/img_submarino"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:background="@drawable/submarino" />

        <TextView
            android:id="@+id/txt_submarino"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:text="@string/voucher_submarino"
            android:textStyle="bold" />

    </LinearLayout>


</LinearLayout>